Changes type, optimizes legibility, divides up sass files, fixes #23

--- a/app/sass/desktop.scss
+++ b/app/sass/desktop.scss
@@ -28,7 +28,7 @@ label.filter-input:before {
     padding-right: 0.2em;
 }
 
-
+// Periodic Table
 
 p.symbol {
     font-size: 22px;
@@ -42,34 +42,26 @@ p.atomic-number {
     height: 18px;
     font-weight: 400;
     margin: 4px 2px;
+    text-transform: uppercase;
 }
 
 p.name {
     font-size: 11px;
     height: 12px;
-    font-weight: 200;
+    font-weight: 400;
     margin: 2px 2px 10px 2px;
 }
 
 .container {
-    width: 960px;
-    padding: 0px;
+    padding: 20px;
 }
 
 .periodic-table {
-    width: 800px;
+    width: 1200px;
     border-radius: 5px;
     background-color: rgba(255,255,255,0.5);
     padding: 5px;
     margin: 0 auto;
-}
-
-.symbol{}
-.atomic-number{
-    display: none;
-}
-.name{
-    display: none;
 }
 
 .row {
@@ -82,10 +74,10 @@ p.name {
 a.element {
     box-sizing: border-box;
     border-radius: 2px;
-    width: 40px;
-    max-width: 40px;
+    width: 63px;
+    max-width: 63px;
     margin-right: 5px;
-    height: 60px;
+    height: 80px;
     background: rgb(255,255,255);
     display: flex;
     flex-direction: column;
