--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,6 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Unica+One:400);
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans:400,300,700);
 
-$primary-color: rgb(50,150,150);
+$primary-color: rgb(50,100,200);
 $secondary-color: rgb(200,200,200);
 $tertiary-color: rgb(50,50,50);
 
@@ -25,7 +25,7 @@ body {
     margin: 0px;
     padding: 0px;
     height: 100%;
-    font-family: 'Helvetica Neue','Helvetica','Arial', sans-serif;
+    font-family: 'Alegreya Sans','Helvetica','Arial', sans-serif;
     background: $secondary-color;
 }
 
@@ -74,160 +74,4 @@ form.filter-form{
     margin: 5px;
     border-radius: 5px;
     border: 1px solid $primary-color;
-}
-
-// FILTER with Checkboxes
-
-input.filter-input {
-    display: none;
-}
-
-label.filter-input {
-  cursor: pointer;
-}
-
-input.filter-input:not(:checked) +
-label.filter-input:before {
-    content: "\f070";
-    font-family: FontAwesome;
-    text-decoration: none;
-    font-size: 18px;
-    padding-right: 0.2em;
-}
-
-input.filter-input:checked +
-label.filter-input:before {
-    content: "\f06e";
-    font-family: FontAwesome;
-    text-decoration: none;
-    font-size: 18px;
-    padding-right: 0.2em;
-}
-
-
-
-p.symbol {
-    font-size: 22px;
-    height: 22px;
-    font-weight: 600;
-    margin: 4px 2px;
-}
-
-p.atomic-number {
-    font-size: 18px;
-    height: 18px;
-    font-weight: 400;
-    margin: 4px 2px;
-}
-
-p.name {
-    font-size: 11px;
-    height: 12px;
-    font-weight: 200;
-    margin: 2px 2px 10px 2px;
-}
-
-.container {
-    width: 1260px;
-    padding: 20px;
-}
-
-.periodic-table {
-    width: 1200px;
-    border-radius: 5px;
-    background-color: rgba(255,255,255,0.5);
-    padding: 5px;
-    margin: 0 auto;
-}
-
-.row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: no-wrap;
-    margin: 5px;
-}
-
-a.element {
-    box-sizing: border-box;
-    border-radius: 2px;
-    width: 63px;
-    max-width: 63px;
-    margin-right: 5px;
-    height: 80px;
-    background: rgb(255,255,255);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #fff;
-    box-shadow: 0px 2px 2px rgba(50,50,50,0.1);
-    text-decoration: none;
-}
-
-
-a.empty {
-    background-color: inherit;
-    border: none;
-    box-shadow: none;
-}
-
-.spacer {
-    height: 20px;
-}
-
-#alkaline-earth-metal {
-    color: darken($alkaline-earth-metal,20%);
-}
-
-#transition-metal {
-    color: darken($transition-metal,20%);
-}
-
-#post-transition-metal {
-    color: darken($post-transition-metal,20%);
-}
-
-#alkali-metal{
-    color: darken($alkali-metal,20%);
-}
-
-#polyatomic-nonmetal{
-    color: darken($polyatomic-nonmetal,20%);
-}
-
-#diatomic-nonmetal{
-    color: darken($diatomic-nonmetal,20%);
-}
-
-#noble-gas{
-    color: darken($noble-gas,20%);
-}
-
-#metalloid{
-    color: darken($metalloid,20%);
-}
-
-#actinide{
-    color: darken($actinide,20%);
-}
-
-#lanthanide{
-    color: darken($lanthanide,20%);
-}
-
-#unknown{
-    color: darken($unknown,20%);
-}
-
-a:hover.element {
-    border: 1px solid white;
-    background: rgba($primary-color,0.7) !important;
-    color: white !important;
-
-}
-
-.filter {
-border-radius: 4px;
-background-color: rgba(255,255,255,0.6);
-padding: 24px 10px;
-margin-bottom: 10px;
 }
